networkpolicy/00-default-deny.yaml
# Placeholder only.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: aria-config
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
